# intel_ipp_linux

./: CMakeLists.txt
include/: ipp.h  ippac.h  ippcc.h  ippch.h  ippcore.h  ippcv.h  ippdc.h  ippdi.h  ippgen.h  ippi.h  ippj.h  ippm.h  ippr.h  ipps.h  ippsc.h  ippvc.h  ippvm.h
tests/: CMakeLists.txt  main.c
